[workspace]

members = [
    "practice/algori",
    "practice/notify-demo",
    "practice/simple-http-server",
    "practice/stack-demo",
    "practice/rust-gzip-demo",
    "practice/rust-antlr-demo",
    "practice/tokio-demo",
    "practice/http_demo",
    "practice/hyper_client_demo",
    "practice/hyper_server_demo",
    "practice/thread_demo",
    "practice/state_pattern_demo",
    "practice/udp-demo",
    "practice/rsa-encrypt-demo",
    "practice/tree-demo",
    "practice/persist-demo",
    "practice/pow",
    "practice/actor",
    "practice/futures",
    "practice/vtable_test",
    "practice/deref_test",
    "practice/memalloc_test",
    "practice/borrow_test",
    "practice/mystring_test",
    "practice/async_trait_test",
    "practice/cpu_simulate"
]
