[package]
name = "pow"
version = "0.1.0"
authors = ["psycode <psyucc@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
prost = "0.9"
tonic = "0.6"
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
anyhow = "1"
blake3 = "1"

[build-dependencies]
tonic-build = "0.6"
