[package]
name = "udp-demo"
version = "0.1.0"
authors = ["sypeng <sypeng@iflytek.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/udp-server.rs"

[[bin]]
name = "client"
path = "src/udp-client.rs"

[dependencies]